--- a/behat.yml
+++ b/behat.yml
@@ -1,9 +1,10 @@
-wip:
+default:
     formatter:
         name: progress
         parameters:
             decorated: true
             verbose: true
             time: true
+wip:    
     filters:
         tags: "@wip"
