Move Adapter\Apc to Source\Apc.
At least I have not change this adapter/source name. :)

- Add "lstrojny/phpunit-function-mocker" to mock PHP functions.
- Remove write/delete functionality.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "behat/behat": "@stable",
         "phpunit/phpunit": "@stable",
         "instaclick/php-code-sniffer": "@stable",
-        "phpmd/phpmd": "@stable"
+        "phpmd/phpmd": "@stable",
+        "lstrojny/phpunit-function-mocker": "dev-master"
     },
     "autoload": {
         "psr-0": {
