Removes Adapter\Rules, Behat tests and unused Exceptions.
Cause without write/delete functionality, rules, behaviours (along with
the Mediator crap) were just stupid.

Removes "Respect\Validation" and "Behat" from composer.json also.

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,8 @@
 {
     "require": {
-        "php": ">=5.4",
-        "respect/validation": "0.4.*"
+        "php": ">=5.4"
     },
     "require-dev": {
-        "behat/behat": "@stable",
         "phpunit/phpunit": "@stable",
         "instaclick/php-code-sniffer": "@stable",
         "phpmd/phpmd": "@stable",
